# HeikoDiscoPi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
debian/: changelog  control  heikodiscopi-usb-mount@.service  heikodiscopi-usb-umount@.service  heikodiscopi.dirs  heikodiscopi.service  install  postinst  prerm  py3dist-overrides  rules  usb_mount.sh
debian/packaging/: heikodiscopi  heikodiscopi.conf
heikodiscopi/: audio.py  config.py  gpio.py  main.py  media.py  zigbee.py
heikodiscopi/utils/: gpio_monitor.py  zigbee_tool.py
heikodiscopy/: gpio.py  media.py
heikodiscopy/utils/: zigbee_tool.py
systemd/: heikodiscopi.service
